syntax = "proto3";

import "google/protobuf/duration.proto";

option go_package = "github.com/bootjp/kvs/proto";

service KVS {
	rpc Put(PutRequest) returns (PutResponse) {}
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc Transaction(TransactionRequest) returns (TransactionResponse) {}
}

message Pair {
	bytes key = 1;
	bytes value = 2;
	google.protobuf.Duration ttl = 3;
}

message PutRequest {
	Pair data = 1;
}

enum Status {
	COMMIT = 0;
	ABORT = 1;
}

message DeleteRequest {
	bytes key = 1;
}

message DeleteResponse {
	uint64 commit_index = 1;
	Status Status = 2;
}

message PutResponse {
	uint64 commit_index = 1;
	Status Status = 2;
}

message Operation {
	oneof OP {
		bytes data = 1;
		bool delete = 2;
	}
}

message TransactionRequest {
	map<string, Operation>pair = 1;
}

message TransactionResponse {
	Status Status = 1;
}

message GetRequest {
	bytes key = 1;
}

enum GetDataError {
	NO_ERROR = 0;
	FETCH_ERROR = 1;
	DATA_NOT_FOUND = 2;
}

message GetResponse {
	uint64 read_at_index = 1;
	GetDataError Error = 2;
	bytes key = 10;
	bytes data = 20;
}


